# dani-sqlite

./: CHANGELOG  CHANGELOG.md  README.md  changelog  dani-sqlite.cabal  dep-t-sqlite.cabal  flake.nix  shell.nix
.github/workflows/: haskell-ci.yml
lib/: SQLite.hs  SQLite3.hs  Sqlite.hs
lib-bindings/SQLite/: Types.hsc
lib-bindings/Sqlite/: Bindings.hs  Types.hsc
lib-direct/SQLite/: Direct.hs
lib-direct/Sqlite/: Direct.hs
lib/Database/SQLite3/Bindings/: Types.hsc
lib/Dep/: SQLite3.hs
lib/Dep/SQLite3/: Bindings.hs  Direct.hs
lib/Dep/SQLite3/Bindings/: Types.hsc
lib/SQLite/: Bindings.hs  Direct.hs  Query.hs  Types.hsc
lib/SQLite/Query/: FromField.hs  FromRow.hs  Internal.hs  Ok.hs  ToField.hs  ToRow.hs  Types.hs
lib/SQLite3/: Bindings.hs  Direct.hs  Types.hsc
lib/SQLite3/Bindings/: Types.hsc
lib/Sqlite/: Query.hs
lib/Sqlite/Query/: FromField.hs  FromRow.hs  Internal.hs  Ok.hs  ToField.hs  ToRow.hs  Types.hs
test/: Main.hs  StrictEq.hs
test-query/: Common.hs  DirectSqlite.hs  Errors.hs  Fold.hs  Main.hs  ParamConv.hs  PreparedStatement.hs  Query.hs  Statement.hs  TestImports.hs  UserInstances.hs  Utf8Strings.hs
