cabal-version:      3.6
name:               dani-sqlite
version:            0.1.0.0
synopsis:           Low-level binding to SQLite3.  Includes UTF8 and BLOB support.
description:        This package is not very different from the other SQLite3 bindings out
                    there, but it fixes a few deficiencies I was finding.  As compared to
                    bindings-sqlite3, it is slightly higher-level, in that it supports
                    marshalling of data values to and from the database.  In particular,
                    it supports strings encoded as UTF8, and BLOBs represented as
                    ByteStrings.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2022 - 2022 Daniel Díaz
author:             Daniel Díaz <diaz_carrete@yahoo.com>
category:           Database
homepage:           https://github.com/danidiaz/dani-sqlite
bug-reports:        https://github.com/danidiaz/dani-sqlite/issues/new
build-type:         Simple

source-repository head
  type:     git
  location: git://github.com/danidiaz/dani-sqlite.git

library
  hs-source-dirs:   lib
  exposed-modules:  SQLite
                    SQLite.Query
                    SQLite.Query.Types
                    SQLite.Query.Ok
                    SQLite.Query.ToField
                    SQLite.Query.ToRow
                    SQLite.Query.FromField
                    SQLite.Query.FromRow
                    SQLite.Query.Internal
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1
                  , text       >= 2.0
                  , exceptions >= 0.10.5
                  , transformers ^>= 0.6.0.0
                  , dani-sqlite:bindings
                  , dani-sqlite:direct
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs

library bindings
  hs-source-dirs:   lib-bindings
  exposed-modules:  SQLite.Bindings
                    SQLite.Types
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  visibility: public
  extra-libraries: sqlite3

library direct
  hs-source-dirs:   lib-direct
  exposed-modules:  SQLite.Direct
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1
                  , text       >= 2.0
                  , dani-sqlite:bindings
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs
  visibility: public

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      StrictEq
  hs-source-dirs:     test
  build-depends:      base
                    , tasty >= 1.4.2.1
                    , tasty-hunit >= 0.10.0.3
                    , base16-bytestring
                    , bytestring
                    , directory
                    , temporary
                    , text
                    , dani-sqlite
                    , dani-sqlite:bindings
                    , dani-sqlite:direct
  default-language:   Haskell2010
  default-extensions: Rank2Types
                      ScopedTypeVariables
                      NamedFieldPuns
                      RecordWildCards
                      OverloadedStrings
                      DeriveDataTypeable
  ghc-options:        -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind

test-suite test-query
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  hs-source-dirs: test-query
  main-is:        Main.hs
  other-modules:  Common
                , DirectSqlite
                , Errors
                , Fold
                , ParamConv
                , Query
                , PreparedStatement
                , TestImports
                , UserInstances
                , Utf8Strings

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  default-extensions:
      NamedFieldPuns
    , OverloadedStrings
    , Rank2Types
    , RecordWildCards

  build-depends: base
               , base16-bytestring
               , bytestring >= 0.9
               , HUnit
               , dani-sqlite
               , text