cabal-version:      3.8
name:               dani-sqlite
version:            0.1.0.0
synopsis:           Low-level binding to Sqlite3.
description:        Low-level binding to Sqlite3. 
                    UTF8 and BLOB support.
                    sqlite library not included.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2022 - 2022 Daniel Díaz
author:             Daniel Díaz <diaz_carrete@yahoo.com>
maintainer:         Daniel Díaz <diaz_carrete@yahoo.com>
category:           Database
homepage:           https://github.com/danidiaz/dani-sqlite
bug-reports:        https://github.com/danidiaz/dani-sqlite/issues/new
build-type:         Simple
extra-doc-files:    CHANGELOG.md,
                    README.md
tested-with:  GHC == {9.10.1, 9.12.2}

source-repository head
  type:     git
  location: git@github.com:danidiaz/dani-sqlite.git

library
  hs-source-dirs:   lib
  exposed-modules:  Sqlite
                    Sqlite.Query
                    Sqlite.Query.Types
                    Sqlite.Query.Ok
                    Sqlite.Query.ToField
                    Sqlite.Query.ToRow
                    Sqlite.Query.FromField
                    Sqlite.Query.FromRow
                    Sqlite.Query.Internal
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1 && < 0.13
                  , text       >= 2.0 && <2.2
                  , dani-sqlite:bindings
                  , dani-sqlite:direct
  default-language: GHC2024
  ghc-options:      -Wall -fwarn-tabs

library direct
  hs-source-dirs:   lib-direct
  exposed-modules:  Sqlite.Direct
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1 && < 0.13
                  , dani-sqlite:bindings
  default-language: GHC2024
  ghc-options:      -Wall -fwarn-tabs
  visibility: public

library bindings
  hs-source-dirs:   lib-bindings
  exposed-modules:  Sqlite.Bindings
                    Sqlite.Types
  build-depends:    base       >= 4.16.0.0 && < 5
                  , bytestring >= 0.9.2.1 && < 0.13
  default-language: GHC2024
  ghc-options:      -Wall -fwarn-tabs
  visibility: public
  extra-libraries: sqlite3

test-suite test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      StrictEq
  hs-source-dirs:     test
  build-depends:      base
                    , tasty >= 1.4.2.1
                    , tasty-hunit >= 0.10.0.3
                    , base16-bytestring
                    , bytestring
                    , directory
                    , temporary
                    , text
                    , dani-sqlite
                    , dani-sqlite:bindings
                    , dani-sqlite:direct
  default-language: GHC2024
  ghc-options:        -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind

test-suite test-query
  default-language: GHC2024
  type:             exitcode-stdio-1.0

  hs-source-dirs: test-query
  main-is:        Main.hs
  other-modules:  Common
                , DirectSqlite
                , Errors
                , Fold
                , ParamConv
                , Query
                , PreparedStatement
                , TestImports
                , UserInstances
                , Utf8Strings

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind


  build-depends: base
               , base16-bytestring
               , bytestring >= 0.9
               , HUnit
               , dani-sqlite
               , text
